fixed spacing

--- a/style.css
+++ b/style.css
@@ -42,3 +42,10 @@ img {
     border-radius: 100%;
 }
 
+.instructions{
+    border-width: 4px;
+    border-style: solid;   
+    border-color: white;
+    padding: 20px ;
+}
+
